[package]
name = "hello"
version = "0.1.0"
authors = ["anweiss <2326106+anweiss@users.noreply.github.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.1"
lambda_runtime = "0.2"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
simple-error = "0.2"


[[bin]]
name = "bootstrap"
path = "src/main.rs"